--- a/GoogleMapsApp/app/src/main/res/layout/activity_maps.xml
+++ b/GoogleMapsApp/app/src/main/res/layout/activity_maps.xml
@@ -12,7 +12,8 @@
             android:id="@+id/button2"
             android:layout_width="147dp"
             android:layout_height="95dp"
-            android:text="Button" />
+            android:onClick="changeMapView"
+            android:text="View" />
 
     </LinearLayout>
 
