--- a/GoogleMapsApp/app/src/main/res/layout/activity_maps.xml
+++ b/GoogleMapsApp/app/src/main/res/layout/activity_maps.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -29,6 +30,12 @@
             android:ems="10"
             android:inputType="textPersonName" />
         <Button
+            android:id="@+id/clear_markers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="clearMarkers"
+            android:text="Clear" />
+        <Button
             android:id="@+id/trackMe"
             android:layout_width="82dp"
             android:layout_height="wrap_content"
@@ -40,16 +47,12 @@
     </LinearLayout>
 
 
-
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.jaeyoung.googlemapsapp.MapsActivity" />
-
 
 
 </LinearLayout>
